--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <meta http-equiv="refresh" content="7; url='https://penguji.id'" />
+    <meta http-equiv="refresh" content="7; url='https://s.id/belajar-qa'" />
     <title>Semacam Penguji Mutu Program Komputer</title>
     <meta
       name="description"
